--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.appspot.apprtc">
+    package="com.chatty.app">
 
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
@@ -24,7 +24,7 @@
         android:theme="@style/AppTheme.NoActionBar">
 
         <activity
-            android:name=".activity.SplashActivity"
+            android:name="com.chatty.app.activity.SplashActivity"
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
@@ -47,14 +47,14 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".activity.MainActivity"/>
-        <activity android:name=".activity.ChatActivity"/>
+        <activity android:name="com.chatty.app.activity.MainActivity"/>
+        <activity android:name="com.chatty.app.activity.ChatActivity"/>
         <activity
-            android:name="SettingsActivity"
+            android:name="com.chatty.app.SettingsActivity"
             android:label="@string/settings_name" />
 
         <activity
-            android:name="CallActivity"
+            android:name="com.chatty.app.CallActivity"
             android:configChanges="orientation|screenSize"
             android:label="@string/app_name"
             android:screenOrientation="fullUser"
