--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,8 @@
         </activity>
         <activity android:name=".activity.ConnectActivity"/>
         <activity android:name="com.chatty.app.activity.MainActivity"/>
-        <activity android:name="com.chatty.app.activity.ChatActivity"/>
+        <activity android:name="com.chatty.app.activity.ChatActivity"
+            android:launchMode="singleTop"/>
         <activity
             android:name="com.chatty.app.CallActivity"
             android:configChanges="orientation|screenSize"
