--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.chatty.app"
+        applicationId "lets.digi.talk"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
