--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.chatty.app">
+    package="lets.digi.talk">
 
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
@@ -15,7 +15,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.CAPTURE_VIDEO_OUTPUT" />
 
     <application
         android:allowBackup="false"
@@ -24,7 +23,7 @@
         android:theme="@style/AppTheme.NoActionBar">
 
         <activity
-            android:name="com.chatty.app.activity.SplashActivity"
+            android:name="lets.digi.talk.activity.SplashActivity"
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustPan"
             android:theme="@style/AppThemeDark.Splash">
@@ -47,12 +46,12 @@
                     android:scheme="http" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.ConnectActivity"/>
-        <activity android:name="com.chatty.app.activity.MainActivity"/>
-        <activity android:name="com.chatty.app.activity.ChatActivity"
+        <activity android:name="lets.digi.talk.activity.ConnectActivity"/>
+        <activity android:name="lets.digi.talk.activity.MainActivity"/>
+        <activity android:name="lets.digi.talk.activity.ChatActivity"
             android:launchMode="singleTop"/>
         <activity
-            android:name="com.chatty.app.CallActivity"
+            android:name="lets.digi.talk.CallActivity"
             android:configChanges="orientation|screenSize"
             android:label="@string/app_name"
             android:screenOrientation="fullUser"
