--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.3.2'
     implementation 'com.google.firebase:firebase-database:19.3.1'
     implementation 'com.google.firebase:firebase-ads:19.3.0'
+    implementation 'com.google.firebase:firebase-config:19.2.0'
     implementation 'com.airbnb.android:lottie:3.4.0'
     compile files('libs/libjingle_peerconnection_java.jar')
     compile files('libs/base_java.jar')
