--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,7 @@
         <activity android:name="lets.digi.talk.activity.MainActivity"/>
         <activity android:name="lets.digi.talk.activity.ChatActivity"
             android:launchMode="singleTop"/>
+        <activity android:name=".activity.SettingsActivity"/>
         <activity
             android:name="lets.digi.talk.CallActivity"
             android:configChanges="orientation|screenSize"
